--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
+    implementation 'com.ea.async:ea-async:1.2.3'
     testImplementation 'junit:junit:4.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
